--- a/base_ubuntu/Dockerfile
+++ b/base_ubuntu/Dockerfile
@@ -1,10 +1,10 @@
-FROM centos:7
-LABEL version="1.0.0" description="centos 7" maintainer="josuehennemann <josuehennemann@gmail.com>"
+FROM ubuntu:18.10 
+LABEL version="1.0.0" description="ubuntu 18.10" maintainer="josuehennemann <josuehennemann@gmail.com>"
 RUN mkdir -p /home/go/src && mkdir -p /home/go/bin && mkdir -p /home/gopack/src/  && mkdir -p /home/workspace/
 VOLUME /home/go/src /home/gopack/src/ /home/workspace/
-RUN yum update -y && yum install wget -y && wget https://dl.google.com/go/go1.4-bootstrap-20171003.tar.gz
+RUN apt-get update -y && apt-get install wget -y && wget https://dl.google.com/go/go1.4-bootstrap-20171003.tar.gz
 RUN tar -C /usr/local -xzf go1.4-bootstrap-20171003.tar.gz && rm go1.4-bootstrap-20171003.tar.gz
-RUN yum install gcc git -y
+RUN apt-get install gcc git -y
 RUN cd /usr/local/go/src/ && ./make.bash && ln -s /usr/local/go/ /root/go1.4
 
 COPY VERSION /home/go/
@@ -13,6 +13,6 @@ COPY .git /home/go/.git
 ENV GOPATH=/home/gopack/
 ENV GOROOT=/home/go
 ENV PATH=$PATH:/home/workspace/Docker/scripts
-ENV BINNAME=centos7
+ENV BINNAME=ubuntu18
 
 CMD ["internalStartContainer.sh", "bash"]
